tests/syntax_error/parentheses_enum_count.jou
enum Thing:
    Blah
    Bleh
    Bruh

const x: int = enum_count Thing  # Error: enum type after enum_count must be in parentheses, e.g. enum_count(Foo)
